[metadata]
name = attr: httpcheck.__title__
version = attr: httpcheck.__version__
description = attr: httpcheck.__description__
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Will Hardy
maintainer_email = public@willhardy.com.au
project_urls =
    Code = https://github.com/willhardy/httpcheck
license = BSD-3-Clause
license_files = LICENSE.rst
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = true
python_requires = >= 3.7
packages = find:
package_dir = = src
install_requires =
    click>=7.1.2

[options.extras_require]
test =
    pytest==5.4.3

[options.entry_points]
console_scripts =
    httpcheck = httpcheck.cli:main
