[metadata]
name = attr: httpcheck.__title__
version = attr: httpcheck.__version__
description = attr: httpcheck.__description__
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Will Hardy
maintainer_email = public@willhardy.com.au
project_urls =
    Code = https://github.com/willhardy/httpcheck
license = BSD-3-Clause
license_files = LICENSE.rst
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = true
python_requires = >= 3.7
packages = find:
package_dir = = src
install_requires =
    click>=7.1.2
    pykafka>=2.8.0
    httpx>=0.13.3
    apscheduler>=3.6.3
    psycopg2>=2.8.4-r0


[options.packages.find]
where=src

[options.extras_require]
test =
    pytest==5.4.3
    pytest-httpx==0.4.0
    pytest-asyncio==0.12.0
    pytest-socket==0.3.5

[options.entry_points]
console_scripts =
    httpcheck = httpcheck.cli:httpcheck_cli
    httpcheck-dbimport = httpcheck.cli:dbimport_cli

[flake8]
# E731 do not assign a lambda expression, use a def
# E501 (line length) is replaced by B950 (10% is ok)
# W503 operators are easier to read at start of line
# E203 This is not PEP8 compliant (whitespace before :)
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E731, E203, E501, W503

[tool:pytest]
addopts = --disable-socket
